--- a/Server/package.json
+++ b/Server/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "nodemon ./Src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ext .ts",
-    "build": "cd backend && yarn install && yarn build"
+    "lint": "eslint --ext .ts"
+   
+ 
   },
   
   "author": "",
