--- a/Server/package.json
+++ b/Server/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "dist/index.ts",
   "scripts": {
-    "start": "nodemon ./Src/index.ts",
+    "dev": " nodemon ./Src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ext .ts"
+    "lint": "eslint --ext .ts",
+    "build": "tsc",
+    "start": "node ./dist/index.js"
    
  
   },
